Added 30+ snippets and updated readme file release 1.0.1

--- a/package.json
+++ b/package.json
@@ -68,6 +68,10 @@
             {
                 "language": "html",
                 "path": "./snippets/template.code-snippets"
+            },
+            {
+                "language": "html",
+                "path": "./snippets/formgroup.code-snippets"
             }
         ]
     }
